[package]
name = "Requiem"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
clap_complete = "4.5"
rustyline = "14"
windows = { version = "0.61.3", features = ["Win32_System", "Win32_Foundation", "Win32_System_Diagnostics_Debug", "Win32_System_Threading", "Win32_System_SystemServices", "Win32_System_IO", "Win32_System_WindowsProgramming", "Win32_Storage_FileSystem", "Win32_System_LibraryLoader", "Win32_Security", "Win32_System_ProcessStatus"] }

